[gd_scene load_steps=18 format=3 uid="uid://dh7847ad2mseb"]

[ext_resource type="Script" uid="uid://lngyik23m7nq" path="res://main_scene.gd" id="1_6mfv6"]
[ext_resource type="PackedScene" uid="uid://b7rtacp6vmh61" path="res://player.tscn" id="1_iwpey"]
[ext_resource type="PackedScene" uid="uid://bbm2bvtnllumt" path="res://enemySpawnController.tscn" id="2_g4qto"]
[ext_resource type="Script" uid="uid://dpdge84gk6m6f" path="res://EnemyFinishLine.gd" id="3_hr5et"]
[ext_resource type="Script" uid="uid://tqs2rd7kmmyu" path="res://bullet_freer.gd" id="5_6mfv6"]
[ext_resource type="PackedScene" uid="uid://b58nkr3w4ubtw" path="res://game_timer.tscn" id="6_2qqqv"]
[ext_resource type="AudioStream" uid="uid://d17qfb1k567tf" path="res://Imports/Audio/LootPickup/lootPickup.mp3" id="7_we1jl"]
[ext_resource type="AudioStream" uid="uid://xne36n7iqfx7" path="res://Imports/Audio/Background/BackGroundMusic-1.mp3" id="8_bnlnp"]
[ext_resource type="Texture2D" uid="uid://bpxr77q6jbqcj" path="res://Imports/Tiles/road_6.png" id="9_vuu3o"]
[ext_resource type="Texture2D" uid="uid://cexs7fuvilctg" path="res://Imports/Tiles/land.png" id="10_0pyiw"]
[ext_resource type="Texture2D" uid="uid://vbq676sjkfi3" path="res://Imports/Tiles/tree_2.png" id="11_us837"]
[ext_resource type="Texture2D" uid="uid://bor6jncbnc4eo" path="res://Imports/Tiles/tree_1.png" id="12_ykwv5"]
[ext_resource type="Texture2D" uid="uid://cktu4ylbxodko" path="res://Imports/Tiles/stone.png" id="13_nlk40"]
[ext_resource type="Texture2D" uid="uid://biflxvmny506c" path="res://Imports/Tiles/decor_2.png" id="14_466gm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwpey"]
size = Vector2(270, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61od6"]
size = Vector2(28, 751)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mfv6"]
size = Vector2(102, 918)

[node name="Main" type="Node2D"]
script = ExtResource("1_6mfv6")
_player = ExtResource("1_iwpey")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(135, -10)
collision_layer = 8
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("RectangleShape2D_iwpey")

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
position = Vector2(135, 733)
collision_layer = 8
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
shape = SubResource("RectangleShape2D_iwpey")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="EnemySpawnController" parent="." instance=ExtResource("2_g4qto")]

[node name="EnemyFreer" type="Area2D" parent="."]
position = Vector2(-41, 363)
collision_layer = 8
collision_mask = 14
script = ExtResource("3_hr5et")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyFreer"]
shape = SubResource("RectangleShape2D_61od6")

[node name="BulletFreer" type="Area2D" parent="."]
position = Vector2(-57, 0)
collision_layer = 0
collision_mask = 0
script = ExtResource("5_6mfv6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletFreer"]
position = Vector2(1424, 372)
shape = SubResource("RectangleShape2D_6mfv6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ShotsFired" type="Label" parent="CanvasLayer"]
offset_left = 1237.0
offset_top = 2.0
offset_right = 1277.0
offset_bottom = 25.0
text = "0"
horizontal_alignment = 2

[node name="TimeTouched" type="Label" parent="CanvasLayer"]
offset_left = 1237.0
offset_top = 30.0
offset_right = 1277.0
offset_bottom = 53.0
text = "0"
horizontal_alignment = 2

[node name="ShotsFiredLabel" type="Label" parent="CanvasLayer"]
offset_left = 1150.0
offset_top = 1.0
offset_right = 1241.0
offset_bottom = 24.0
text = "Shots Fired:"

[node name="TimeTouchedLabel" type="Label" parent="CanvasLayer"]
offset_left = 1128.0
offset_top = 29.0
offset_right = 1241.0
offset_bottom = 52.0
text = "Time Touched:"

[node name="EnemiesThroughLabel" type="Label" parent="CanvasLayer"]
offset_left = 1102.0
offset_top = 58.0
offset_right = 1241.0
offset_bottom = 81.0
text = "Enemies Through:"

[node name="TotalKillsLabel" type="Label" parent="CanvasLayer"]
offset_left = 1102.0
offset_top = 89.0
offset_right = 1241.0
offset_bottom = 112.0
text = "Total Kills:"
horizontal_alignment = 2

[node name="TotalGameTimeLabel" type="Label" parent="CanvasLayer"]
offset_left = 715.0
offset_top = -1.0
offset_right = 871.0
offset_bottom = 22.0
text = "Elapsed Game Time:"
horizontal_alignment = 2

[node name="EnemiesThrough" type="Label" parent="CanvasLayer"]
offset_left = 1237.0
offset_top = 59.0
offset_right = 1277.0
offset_bottom = 82.0
text = "0"
horizontal_alignment = 2

[node name="TotalKills" type="Label" parent="CanvasLayer"]
offset_left = 1237.0
offset_top = 90.0
offset_right = 1277.0
offset_bottom = 113.0
text = "0"
horizontal_alignment = 2

[node name="TotalGameTime" type="Label" parent="CanvasLayer"]
offset_left = 874.0
offset_right = 938.0
offset_bottom = 23.0
text = "00:00:00"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 219.0
offset_top = 151.5
offset_right = 379.0
offset_bottom = 231.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Shots Fired:"

[node name="Label2" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Shots Fired:"

[node name="GameTimer" parent="." instance=ExtResource("6_2qqqv")]
z_index = 1
position = Vector2(610, 10)

[node name="LootPickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_we1jl")

[node name="BackGroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bnlnp")
volume_db = -30.0
parameters/looping = false

[node name="Lanes" type="Node2D" parent="."]
position = Vector2(0, -9)

[node name="Lane4" type="Node2D" parent="Lanes"]
z_index = -1
position = Vector2(0, -4)

[node name="Sprite2D" type="Sprite2D" parent="Lanes/Lane4"]
position = Vector2(1159, 663)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D2" type="Sprite2D" parent="Lanes/Lane4"]
position = Vector2(903, 663)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D3" type="Sprite2D" parent="Lanes/Lane4"]
position = Vector2(647, 663)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D4" type="Sprite2D" parent="Lanes/Lane4"]
position = Vector2(391, 663)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D5" type="Sprite2D" parent="Lanes/Lane4"]
position = Vector2(135, 663)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D6" type="Sprite2D" parent="Lanes/Lane4"]
position = Vector2(-121, 663)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Lane3" type="Node2D" parent="Lanes"]
z_index = -1
position = Vector2(1185, 509)

[node name="Sprite2D" type="Sprite2D" parent="Lanes/Lane3"]
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D2" type="Sprite2D" parent="Lanes/Lane3"]
position = Vector2(-256, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D3" type="Sprite2D" parent="Lanes/Lane3"]
position = Vector2(-512, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D4" type="Sprite2D" parent="Lanes/Lane3"]
position = Vector2(-768, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D5" type="Sprite2D" parent="Lanes/Lane3"]
position = Vector2(-1024, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D6" type="Sprite2D" parent="Lanes/Lane3"]
position = Vector2(-1280, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Lane2" type="Node2D" parent="Lanes"]
z_index = -1
position = Vector2(1185, 268)

[node name="Sprite2D" type="Sprite2D" parent="Lanes/Lane2"]
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D2" type="Sprite2D" parent="Lanes/Lane2"]
position = Vector2(-256, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D3" type="Sprite2D" parent="Lanes/Lane2"]
position = Vector2(-512, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D4" type="Sprite2D" parent="Lanes/Lane2"]
position = Vector2(-768, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D5" type="Sprite2D" parent="Lanes/Lane2"]
position = Vector2(-1024, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D6" type="Sprite2D" parent="Lanes/Lane2"]
position = Vector2(-1280, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Lane1" type="Node2D" parent="Lanes"]
z_index = -1
position = Vector2(1185, 113)

[node name="Sprite2D" type="Sprite2D" parent="Lanes/Lane1"]
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D2" type="Sprite2D" parent="Lanes/Lane1"]
position = Vector2(-256, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D3" type="Sprite2D" parent="Lanes/Lane1"]
position = Vector2(-512, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D4" type="Sprite2D" parent="Lanes/Lane1"]
position = Vector2(-768, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D5" type="Sprite2D" parent="Lanes/Lane1"]
position = Vector2(-1024, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="Sprite2D6" type="Sprite2D" parent="Lanes/Lane1"]
position = Vector2(-1280, 0)
scale = Vector2(1, 0.537)
texture = ExtResource("9_vuu3o")

[node name="GrassLand" type="Node2D" parent="."]

[node name="Grass" type="Node2D" parent="GrassLand"]
z_index = -2
position = Vector2(227, 231)

[node name="Sprite2D" type="Sprite2D" parent="GrassLand/Grass"]
texture = ExtResource("10_0pyiw")

[node name="Grass2" type="Node2D" parent="GrassLand"]
z_index = -2
position = Vector2(226, 673)

[node name="Sprite2D" type="Sprite2D" parent="GrassLand/Grass2"]
texture = ExtResource("10_0pyiw")

[node name="Grass3" type="Node2D" parent="GrassLand"]
z_index = -2
position = Vector2(738, 565)

[node name="Sprite2D" type="Sprite2D" parent="GrassLand/Grass3"]
texture = ExtResource("10_0pyiw")

[node name="Grass4" type="Node2D" parent="GrassLand"]
z_index = -2
position = Vector2(738, 196)

[node name="Sprite2D" type="Sprite2D" parent="GrassLand/Grass4"]
texture = ExtResource("10_0pyiw")

[node name="Grass5" type="Node2D" parent="GrassLand"]
z_index = -2
position = Vector2(1098, 196)

[node name="Sprite2D" type="Sprite2D" parent="GrassLand/Grass5"]
texture = ExtResource("10_0pyiw")

[node name="Grass6" type="Node2D" parent="GrassLand"]
z_index = -2
position = Vector2(1114, 636)

[node name="Sprite2D" type="Sprite2D" parent="GrassLand/Grass6"]
texture = ExtResource("10_0pyiw")

[node name="Decor" type="Node2D" parent="."]
z_index = -1

[node name="Sprite2D16" type="Sprite2D" parent="Decor"]
position = Vector2(76, 581)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D17" type="Sprite2D" parent="Decor"]
position = Vector2(401, 359)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D18" type="Sprite2D" parent="Decor"]
position = Vector2(587, 432)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D19" type="Sprite2D" parent="Decor"]
position = Vector2(880, 367)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D20" type="Sprite2D" parent="Decor"]
position = Vector2(780, 434)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D21" type="Sprite2D" parent="Decor"]
position = Vector2(1120, 370)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D22" type="Sprite2D" parent="Decor"]
position = Vector2(1162, 432)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D23" type="Sprite2D" parent="Decor"]
position = Vector2(103, 419)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D24" type="Sprite2D" parent="Decor"]
position = Vector2(24, 189)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D25" type="Sprite2D" parent="Decor"]
position = Vector2(638, 189)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D26" type="Sprite2D" parent="Decor"]
position = Vector2(1137, 186)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D27" type="Sprite2D" parent="Decor"]
position = Vector2(1023, 577)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D28" type="Sprite2D" parent="Decor"]
position = Vector2(690, 583)
scale = Vector2(0.8, 0.8)
texture = ExtResource("13_nlk40")

[node name="Sprite2D29" type="Sprite2D" parent="Decor"]
position = Vector2(80, 36)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_466gm")

[node name="Sprite2D30" type="Sprite2D" parent="Decor"]
position = Vector2(1237, 579)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_466gm")

[node name="Trees" type="Node2D" parent="Decor"]
z_index = 1

[node name="Sprite2D" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(14, 365)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D2" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(291, 398)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D10" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(389, 549)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D11" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(884, 549)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D32" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(1006, 4)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D14" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(388, 154)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D15" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(829, 160)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D3" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(1000, 373)
scale = Vector2(0.25, 0.5)
texture = ExtResource("11_us837")

[node name="Sprite2D4" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(629, 373)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D5" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(1222, 398)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D6" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(194, 548)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D31" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(348, -2.99994)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D12" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(94, 159)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D13" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(1194, 158)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D7" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(541, 548)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D8" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(1153, 548)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[node name="Sprite2D9" type="Sprite2D" parent="Decor/Trees"]
position = Vector2(149, 383)
scale = Vector2(0.4, 0.4)
texture = ExtResource("12_ykwv5")

[editable path="GameTimer"]
